--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,23 @@
   <title>Hello Mix</title>
 </head>
 <body>
-  <h1>Hello Mix</h1>
+  <!--HEADER-->
+
+  <!--MAIN CONTENT-->
+    <!--section 1-->
+
+    <!--section 2-->
+
+    <!--section 3-->
+
+    <!--section 4-->
+
+    <!--section 5-->
+
+    <!--section 6-->
+
+    <!--section 7-->
+
+  <!--FOOTER-->
 </body>
 </html>
