altro scaffolding, aggiunto font

--- a/public/index.html
+++ b/public/index.html
@@ -4,28 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="css/style.css">
   <script src="js/script.js"></script>
   <title>Hello Mix</title>
 </head>
 <body>
   <!--HEADER-->
+  <header>
+    <!--logo-->
+    <div id="site-logo">LOGO</div>
+    <!--nav-->
+    <div id="header-nav">
+      NAV
+    </div>
+  </header>
 
   <!--MAIN CONTENT-->
+  <main>
     <!--section 1-->
-
+    <section>SECTION</section>
     <!--section 2-->
-
+    <section>SECTION</section>
     <!--section 3-->
-
+    <section>SECTION</section>
     <!--section 4-->
-
+    <section>SECTION</section>
     <!--section 5-->
-
+    <section>SECTION</section>
     <!--section 6-->
-
+    <section>SECTION</section>
     <!--section 7-->
+    <section>SECTION</section>
+  </main>
 
   <!--FOOTER-->
+  <footer>
+    <!--Mission-->
+    <div id="motto">MOTTO</div>
+    <!--Site Links-->
+    <div id="site-links">
+      LINKS
+    </div>
+  </footer>
 </body>
 </html>
