aggiunto titolo testata

--- a/public/index.html
+++ b/public/index.html
@@ -27,19 +27,26 @@
   <!--MAIN CONTENT-->
   <main>
     <!--section 1-->
-    <section>SECTION</section>
+    <section>
+      <div class="container">
+        <div class="pitch-title">
+          <h1>Understand, recognize and develop your people</h1>
+          <p>Teambit helps teams create a high performing culture with regular feedback.</p>
+        </div>
+      </div>
+    </section>
     <!--section 2-->
-    <section>SECTION</section>
+    <section><div class="container"></div></section>
     <!--section 3-->
-    <section>SECTION</section>
+    <section><div class="container"></div></section>
     <!--section 4-->
-    <section>SECTION</section>
+    <section><div class="container"></div></section>
     <!--section 5-->
-    <section>SECTION</section>
+    <section><div class="container"></div></section>
     <!--section 6-->
-    <section>SECTION</section>
+    <section><div class="container"></div></section>
     <!--section 7-->
-    <section>SECTION</section>
+    <section><div class="container"></div></section>
   </main>
 
   <!--FOOTER-->
