--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,7 +16,7 @@
   <header>
     <div class="container">
       <!--logo-->
-      <div id="site-logo">LOGO</div>
+      <div id="site-logo"></div>
       <!--nav-->
       <div id="header-nav">
         NAV
@@ -27,26 +27,35 @@
   <!--MAIN CONTENT-->
   <main>
     <!--section 1-->
-    <section>
+    <section id="sect-pitch">
       <div class="container">
         <div class="pitch-title">
           <h1>Understand, recognize and develop your people</h1>
           <p>Teambit helps teams create a high performing culture with regular feedback.</p>
         </div>
+        <div class="call-to-action">
+          <button>Sign with Google</button>
+          <span>or</span>
+          <button>Sign up with Slack</button>
+          <p>or use your email address</p>
+        </div>
+        <img src="img/illustration-main.jpg" class="img-main"></img>
       </div>
     </section>
     <!--section 2-->
-    <section><div class="container"></div></section>
+    <section id="sect-pitch-2" class="bg-salmon"><div class="container"></div></section>
     <!--section 3-->
-    <section><div class="container"></div></section>
+    <section id="sect-pitch-3" class="bg-salmon"><div class="container"></div></section>
     <!--section 4-->
-    <section><div class="container"></div></section>
+    <section id="sect-feat"><div class="container"></div></section>
     <!--section 5-->
-    <section><div class="container"></div></section>
+    <section id="sect-feat-2"><div class="container"></div></section>
     <!--section 6-->
-    <section><div class="container"></div></section>
+    <section id="sect-feat-3"><div class="container"></div></section>
     <!--section 7-->
-    <section><div class="container"></div></section>
+    <section id="sect-feat-4"><div class="container"></div></section>
+    <!--section 8-->
+    <section id="sect-get-started" class="bg-salmon"><div class="container"></div></section>
   </main>
 
   <!--FOOTER-->
