--- a/public/index.html
+++ b/public/index.html
@@ -43,19 +43,99 @@
       </div>
     </section>
     <!--section 2-->
-    <section id="sect-pitch-2" class="bg-salmon"><div class="container"></div></section>
+    <section id="sect-pitch-2" class="bg-salmon">
+      <div class="container">
+        <div class="pitch-title">
+          <h2>Traditional people processes lead to disengagement 
+            <br> and turnover.</h2>
+        </div>
+        <div class="pitch-block">
+          <img src="img/hardcore.png" alt="hardcore" class="img-small">
+          <p>They are hardcore, <br>
+            formal and disconnected</p>
+        </div>
+        <div class="pitch-block">
+          <img src="img/nofeedback.png" alt="feedback" class="img-small">
+          <p>They don't encourage <br>
+              regular feedback</p>
+        </div>
+        <div class="pitch-block">
+          <img src="img/notsafe.png" alt="hardcore" class="img-small">
+          <p>They don't make it <br>
+              safe to speak up</p>
+        </div>
+        <div class="img-main">
+          <img src="img/before.png" alt="disengaged">
+        </div>
+      </div> 
+      <hr>
+    </section>
+
+   
     <!--section 3-->
-    <section id="sect-pitch-3" class="bg-salmon"><div class="container"></div></section>
+    <section id="sect-pitch-3" class="bg-salmon">
+      <div class="container">
+          <div class="pitch-title">
+              <h1>Understand, recognize and develop your people</h1>
+              <p>Teambit helps teams create a high performing culture with regular feedback.</p>
+            </div>
+            <div class="call-to-action">
+              <button>Sign with Google</button>
+              <span>or</span>
+              <button>Sign up with Slack</button>
+              <p>or use your email address</p>
+            </div>
+            <img src="img/illustration-main.jpg" class="img-main"></img>
+          </div>
+        </section>
+        <!--section 2-->
+        <section id="sect-pitch-2" class="bg-salmon">
+          <div class="container">
+            <div class="pitch-title">
+              <h2>It doesn't have to be like that. <br>
+                 Teambit is a modern solution that teammates love.</h2>
+            </div>
+            <div class="pitch-block">
+              <img src="img/hardcore.png" alt="hardcore" class="img-small">
+              <p>They are hardcore, <br>
+                formal and disconnected</p>
+            </div>
+            <div class="pitch-block">
+              <img src="img/nofeedback.png" alt="feedback" class="img-small">
+              <p>They don't encourage <br>
+                  regular feedback</p>
+            </div>
+            <div class="pitch-block">
+              <img src="img/notsafe.png" alt="hardcore" class="img-small">
+              <p>They don't make it <br>
+                  safe to speak up</p>
+            </div>
+            <div class="img-main">
+              <img src="img/before.png" alt="disengaged">
+            </div>
+          </div> 
+      </div>
+    </section>
     <!--section 4-->
-    <section id="sect-feat"><div class="container"></div></section>
+    <section id="sect-feat">
+      <div class="container"></div>
+    </section>
     <!--section 5-->
-    <section id="sect-feat-2"><div class="container"></div></section>
+    <section id="sect-feat-2">
+      <div class="container"></div>
+    </section>
     <!--section 6-->
-    <section id="sect-feat-3"><div class="container"></div></section>
+    <section id="sect-feat-3">
+      <div class="container"></div>
+    </section>
     <!--section 7-->
-    <section id="sect-feat-4"><div class="container"></div></section>
+    <section id="sect-feat-4">
+      <div class="container"></div>
+    </section>
     <!--section 8-->
-    <section id="sect-get-started" class="bg-salmon"><div class="container"></div></section>
+    <section id="sect-get-started" class="bg-salmon">
+      <div class="container"></div>
+    </section>
   </main>
 
   <!--FOOTER-->
