--- a/src/html/index.html
+++ b/src/html/index.html
@@ -98,12 +98,27 @@
         <div class="img-main">
           <img src="img/after.png" alt="engaged">
         </div>
+        <div class="pitch-title">
+          <h2>Here's how it works</h2>
+        </div>
       </div>
 
     </section>
     <!--section 4-->
     <section id="sect-feat">
-      <div class="container"></div>
+      <div class="container">
+        <div class="img-container">
+          <img src="img/employee-feedback.jpg" alt="feedback-screen">
+        </div>
+        <div class="pitch-block">
+          <h2>Feedback to help teammates improve</h2>
+          <p>Empower your teammates to know in real time what they are <br>
+             doing well and what they need to improve.</p>
+          <a href="">Learn more -></a>
+          <div><img src="img/communication.jpg" alt="communication"></div>
+          
+        </div>
+      </div>
     </section>
     <!--section 5-->
     <section id="sect-feat-2">
